# datacuration_client

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  integration.yml
data_curation_client/: __init__.py  api.py  cli.py  config.py
datacuration_api/: __init__.py  client.py  config.py
datacuration_api/tests/: __init__.py  test_client.py
datacuration_cli/: __init__.py  cli.py
datacuration_cli/tests/: __init__.py  test_cli.py  test_integration.py
docs/: api_options.md
dotnet_script/: .env.example  README.md  datacuration.csx  run-datacuration.ps1  run-datacuration.sh  test_validation.md
specs/: 01-cli-client-implementation.md  02-split-library-and-cli.md  03-github-actions-ci.md  04-integration-tests.md  05-documentation-improvements.md
tests/: __init__.py  test_api.py  test_cli.py
