[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Common project settings
[project]
name = "datacuration"
version = "0.1.0"
description = "Hyland Data Curation API client and CLI tools"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

# Define development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "types-requests>=2.28.0",
    "pdoc3>=0.10.0",
]

# Define the packages to include
[tool.setuptools]
packages = ["datacuration_api", "datacuration_cli"]

# Define the CLI entry point
[project.scripts]
datacuration = "datacuration_cli.cli:main"

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["datacuration_api/tests", "datacuration_cli/tests"]
markers = [
    "integration: marks tests as integration tests that require API credentials (deselect with '-m \"not integration\"')"
]
# Skip integration tests by default
addopts = "-m 'not integration'"

# Type checking configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
